<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.MainActivity">

    <Button
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#2C000000"
        android:onClick="quitLog"
        android:text="@string/quit"
        app:backgroundTint="#009688"
        app:iconTint="#E91E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/avatarDescription"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/name"
        android:layout_width="111dp"
        android:layout_height="56dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="112dp"
        android:textSize="24sp"
        android:text="@string/nameExample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragment1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:background="#3BFFFFFF"
        android:text="@string/Fragment1"
        android:onClick="alert"
        app:backgroundTint="#F44336"
        app:layout_constraintBaseline_toBaselineOf="@+id/fragment2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fragment2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#3BFFFFFF"
        android:text="@string/Fragment2"
        android:onClick="audio"
        app:backgroundTint="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragment3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/Fragment3"
        android:onClick="notice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment1"
        app:layout_constraintVertical_bias="0.03" />

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:ignore="MissingConstraints" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls_main"
            style="@style/Widget.Theme.WardSide.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/backMap"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="goToMapPage"
                android:textColor="@color/black"
                android:text="@string/backMap"
                app:backgroundTint="#F04CAF50" />


        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>